added colorModal Overlay and fixed navbar css

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
 		<title>Abhishek Kumar</title>
 	</head>
 	<body>
+
+		<div id="backdrop"></div>
+		<div id="overlay"></div>
 		<div id="root"></div>
+
 	</body>
 </html>
