--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,17 @@
 			href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Barlow+Condensed:wght@300&family=Bellefair&family=Changa:wght@500&display=swap"
 			rel="stylesheet"
 		/>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+		/>
 
 		<title>Abhishek Kumar</title>
 	</head>
 	<body>
-
 		<div id="backdrop"></div>
 		<div id="overlay"></div>
 		<div id="root"></div>
-
 	</body>
 </html>
