--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
     <title>Z.G. Portfolio</title>
   </head>
   <body>
-    <div id="backdrop"></div>
-    <div id="overlay"></div>
+    <!-- <div id="backdrop"></div>
+    <div id="overlay"></div> -->
     <div id="root"></div>
   </body>
 </html>
